--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 function endgame(){
     playGame=false
     submit.value='New Game';
+    num=Math.floor((Math.random()*100)+1)
 
 }
     function message(mess){
